# Codelens

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  codelens.yaml  pyproject.toml  render.yaml
api/: __init__.py  main.py
cli/: __init__.py  main.py
core/: __init__.py  agent.py  ast_parser.py  config.py  embedder.py  explainer.py  fusion.py  graph_builder.py  keyword_retriever.py  llm_client.py  models.py  pr_intelligence.py  query_engine.py  query_rewriter.py  repo_loader.py  service.py  vector_index.py
tests/: __init__.py  test_agent_intelligence.py  test_ast_parser.py  test_graph_builder.py  test_multirag.py
tests/fixtures/sample_repo/: app.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  App.module.css  index.css
